--- a/Features/Sheets/styles.css
+++ b/Features/Sheets/styles.css
@@ -31,6 +31,15 @@
     color: rgb(255, 255, 255);
     background-color: rgba(255, 251, 251, 0.507);
 }
+
+body{
+    margin: 0px;
+    border: 0px;
+    background-color: skyblue;
+    width: 100vw;
+    overflow-x: hidden;
+    height: 1000px;
+}
 .navBarmain{
     height: 100px;
     width: 100vw;
@@ -38,27 +47,16 @@
     position: fixed;
     transition: all 0.3s ease 0s;
 }
-
-body{
-    margin: 0px;
-    border: 0px;
-    background-image: url("../drawable/pattern.jpg");
-    background-repeat: repeat;
-    background-position:center;
-    background-color: skyblue;
-    width: 100vw;
-    overflow-x: hidden;
-    height: 1000px;
-    }
 /*for the shrinking sa navbar ni*/
 .navbarshrink{
     background-color: white;
-    height: 97px;
+    height: 98px;
     transition: all 0.3s ease 0s;
     border-width: 0px 0px 2px 0px;
     border-radius: 0px 0px 5px 5px;
     border-style: solid;
     border-color: #555;
+    z-index: 1;
 }
 .navbarshrink .navigations li{
     margin-top: 35px;
@@ -89,10 +87,19 @@ body{
 .navbarshrink .current:hover{
     border-width: 3px;
 }
-.navbarshrink .Logo h3{
-    margin-top: 45px;
-    color: black;
+.navbarshrink .Logo .h21{
+    margin-top: 35px;
+    color: darkblue;
+    background-color: skyblue;
+    border-radius: 5px;
+    padding: 10px;
 }
+.navbarshrink .Logo .h22{
+    margin-top: 35px;
+    color: black;
+    background-color: white;
+}
+
 /*end*/
 /*Logo*/
 .Logo{
@@ -100,13 +107,28 @@ body{
     margin-top: 20px;
     margin: 15px;
     padding: 20px;
-    
+    margin-top: 13px;
+    margin-left: 80px;
 }
-.Logo h3{
+
+.h21{
+    font-weight: 900;
+    letter-spacing: 2px;
     color: rgb(3, 3, 3);
     display: inline-block;
-    margin-top: 50px;  
+    margin-top: 35px;  
     transition: all 0.3s ease 0s;
+}
+.h22{
+    font-weight: 900;
+    letter-spacing: 2px;
+    color: skyblue;
+    display: inline-block;
+    margin-top: 35px;  
+    transition: all 0.3s ease 0s;
+    background-color: darkblue;
+    border-radius: 5px;
+    padding: 10px;
 }
 /*ul na ni*/
 .navigations{
@@ -143,6 +165,7 @@ body{
     border-style: solid;
     border-radius: 5px;
 }
+
 /*sa background ug quote na i*/
 .feature-text{
     text-align: center;
